--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,13 +20,15 @@
 ###############################################################################
 $$ TODO
 $$ TODO Version 2.x
-$$ TODO - add windows version
 $$ TODO - add Mac OS version
 $$ TODO - add AMD Zen support
 $$ TODO
 $$ TODO Version 2.0
 $$ TODO - add results verification
-$$ TODO - improve Haswell/Broadwell and Skylake support
+$$ TODO - improve Haswell/Broadwell, KNL, and Skylake support
+
+Version 1.6
+ - added Windows version
 
 Version 1.5
  - added Knights Landing support (AVX512F)
