--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,9 @@ $$ TODO Version 2.0
 $$ TODO - add results verification
 $$ TODO - improve Haswell/Broadwell, KNL, and Skylake support
 
+Version 1.7.1
+ - fixed Skylake-X problem in the Win64 version
+
 Version 1.7
  - added Skylake-SP support
  - minor fixes
