--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 ###############################################################################
 # FIRESTARTER - A Processor Stress Test Utility
-# Copyright (C) 2018 TU Dresden, Center for Information Services and High
+# Copyright (C) 2019 TU Dresden, Center for Information Services and High
 # Performance Computing
 #
 # This program is free software: you can redistribute it and/or modify
@@ -26,6 +26,10 @@ $$ TODO
 $$ TODO Version 2.0
 $$ TODO - add results verification
 $$ TODO - improve Haswell/Broadwell, KNL, and Skylake support
+
+Version 1.7.3
+ - FIRESTARTER_CUDA uses single precision by default when running on GPUs with poor double precision support (requires CUDA 8 or later)
+ - FIRESTARTER_CUDA_LEGACY (CUDA 5 or later)
 
 Version 1.7.2
  - fixed CUDA problem with low power consumption
