--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,7 +28,7 @@ $$ TODO - add results verification
 $$ TODO - improve Haswell/Broadwell, KNL, and Skylake support
 
 Version 1.7.4
- - added AMD Naples support (ZEN_FMA)
+ - added AMD Zen and Zen+ support (ZEN_FMA)
 
 Version 1.7.3
  - FIRESTARTER_CUDA uses single precision by default when running on GPUs with poor double precision support (requires CUDA 8 or later)
