--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,14 @@ $$ TODO Version 2.0
 $$ TODO - add results verification
 $$ TODO - improve Haswell/Broadwell, KNL, and Skylake support
 
+Version 2.0
+ - added AMD Rome (Zen 2) support
+ - added Mac OS support
+ - CUDA support on Windows
+ - Automatic optimization via default (perf-ipc, ipc-estimate, sysfs-powercap-rapl) or user-defined metrics (--metric-from-stdin)
+ - Automatic measurement of metrics
+ - tweaked payloads to hinder vector registers converging to denormal values
+
 Version 1.7.4
  - added AMD Zen and Zen+ support (ZEN_FMA)
  - FIRESTARTER_CUDA requires CUDA 10
