update example notebook for evaluation of FIRESTARTER results

--- a/examples/Evaluation_Notebook/Evaluation_Notebook.ipynb
+++ b/examples/Evaluation_Notebook/Evaluation_Notebook.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example Notebook for evaluation of FIRESTARTER optimization results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,6 +18,13 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Defining the used metrics"
    ]
   },
   {
@@ -27,6 +41,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Read the json output of FIRESTARTER"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,11 +55,19 @@
    "source": [
     "with open('testmachine_DATETIME.json', 'r') as fp:\n",
     "    data = json.loads(fp.read())\n",
+    "    startTime = data['startTime']\n",
     "    del data['startTime']\n",
+    "    endTime = data['endTime']\n",
     "    del data['endTime']\n",
+    "    args = data['args']\n",
     "    del data['args']\n",
+    "    hostname = data['hostname']\n",
     "    del data['hostname']\n",
-    "df = pd.DataFrame(data)"
+    "    payloadItems = data['payloadItems']\n",
+    "    del data['payloadItems']\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(f\"Evaluating FIRESTARTER run on {hostname} from {startTime} to {endTime} with args: {args}\")"
    ]
   },
   {
@@ -76,6 +105,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This shows the correlation between the perf-ipc and ipc-estimate metric"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -85,12 +121,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show the evaluated individuals sorted by Power"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.sort_values(by=POWER, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_run_instruction_groups_str(items: str, ind: [int]) -> str:\n",
+    "    z = zip(items, ind)\n",
+    "    z = filter(lambda v: v[1] != 0, z)\n",
+    "    z = map(lambda v: v[0] + \":\" + str(v[1]), z)\n",
+    "    return ','.join(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best = df.sort_values(by=POWER, ascending=False)['individuals'].tolist()[0]\n",
+    "print(f\"\"\"To run FIRESTARTER with the best individual of metric {POWER} use the command line argument\n",
+    "--run-instruction-groups={generate_run_instruction_groups_str(payloadItems, best)}\"\"\")"
    ]
   }
  ],
