--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,11 +21,15 @@
 $$ TODO
 $$ TODO Version 2.x
 $$ TODO - add results verification
-$$ TODO - improve Haswell/Broadwell, KNL, and Skylake support
-$$ TODO - support for IBM POWER9 systems
+$$ TODO - add AMD GPUs
+$$ TODO - add more processors
 $$ TODO - support for AArch64 (64 Bit ARM)
 $$ TODO - support Infiniband interconnects
 $$ TODO
+
+Version 2.1
+ - added Intel OneAPI support for Intel GPUs
+ - CUDA fixes
 
 Version 2.0
  - added AMD Rome (Zen 2) support
