--- a/CHANGELOG
+++ b/CHANGELOG
@@ -24,11 +24,12 @@ $$ TODO - add results verification
 $$ TODO - add more processors
 $$ TODO - support for AArch64 (64 Bit ARM)
 $$ TODO - support Infiniband interconnects
-$$ TODO
-$$ TODO Version 2.2
-$$ TODO  - added support for AMD GPUs
-$$ TODO  - support for thread binding on all supported platforms
-$$ TODO  - bug fixes related to thread binding with cgroups
+
+Version 2.2
+ - added support for AMD GPUs
+ - support for thread binding on all supported platforms
+ - bug fixes related to thread binding with cgroups and disabled cpus
+ - added report for estimated GPU FLOPS
 
 Version 2.1.1
  - Removed MacOS 11
